--- a/widget/html/viewHistory.html
+++ b/widget/html/viewHistory.html
@@ -84,11 +84,11 @@ apiready = function() {
     }
 
     // 取消毛玻璃效果
-    api.addEventListener({
-        name: 'setBlurNone'
-    }, function(ret, err) {
-        setBlur('wrap', false);
-    });
+    // api.addEventListener({
+    //     name: 'setBlurNone'
+    // }, function(ret, err) {
+    //     setBlur('wrap', false);
+    // });
 
     // 设置字段为readonly
     $api.attr($api.byId('patient_info'), 'readonly', 'true');
@@ -115,7 +115,7 @@ apiready = function() {
  */
 function openFrame(type) {
     // 设置毛玻璃效果
-    setBlur("wrap", true);
+    // setBlur("wrap", true);
 
     api.openFrame({
         name: type,
