--- a/widget/html/viewPatient.html
+++ b/widget/html/viewPatient.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>患者信息</title>
-    <link rel="stylesheet" type="text/css" href="../css/patient.css" />
+    <link rel="stylesheet" type="text/css" href="../css/patient_flat.css" />
     <link rel="stylesheet" type="text/css" href="../css/button.css" />
     <script type="text/javascript" src="../script/api.js"></script>
     <script type="text/javascript" src="../script/util.js"></script>
