--- a/widget/html/picker/birthdayPickerFrame.html
+++ b/widget/html/picker/birthdayPickerFrame.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="flex-wrap flex-vertical" id='pageone'>
+    <div class="flex-wrap flex-vertical">
         <header id='header'>
             <nav id="nav">
                 <a id="left" tapmode="" onclick="window.closeFrame();" class="button button-raised button-royal">
