--- a/widget/html/picker/condepPickerFrame.html
+++ b/widget/html/picker/condepPickerFrame.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/button.css" />
     <script type="text/javascript" src="../../script/api.js"></script>
     <script type="text/javascript" src="../../script/util.js"></script>
+    <script type="text/javascript" src="../../script/constants.js"></script>
 </head>
 
 <body>
