修改picker字体颜色

--- a/widget/html/history.html
+++ b/widget/html/history.html
@@ -101,7 +101,7 @@ apiready = function() {
         name: 'returnCondep'
     }, function(ret, err) {
         if (ret) {
-            $api.byId('consultation_department').value = ret.value.consultationDepartment;
+            $api.byId('consultation_department').value = ret.value.consultation_department;
         }
     });
 
