--- a/widget/html/picker/condepPickerFrame.html
+++ b/widget/html/picker/condepPickerFrame.html
@@ -61,8 +61,8 @@ apiready = function() {
         },
         styles: {
             bg: 'rgba(0,0,0,0)',
-            normalColor: '#959595',
-            selectedColor: '#3685dd',
+            normalColor: '#E1D7CA',
+            selectedColor: '#655A55',
             selectedSize: 36,
             tagColor: '#3685dd',
             tagSize: 10
