--- a/widget/html/viewHistory.html
+++ b/widget/html/viewHistory.html
@@ -31,7 +31,15 @@
         <div id="main">
             <div class="field" onclick="openFrame('viewPatient');">
                 <div class="field_name"><span id="patient_info"></span></div>
-                <div class="more"><span>&gt;</span></div>
+                <div class="more"><span>&gt;&gt;</span></div>
+            </div>
+            <div class="field">
+                <div class="field_name">体检</div>
+                <div class="more"><span>&gt;&gt;</span></div>
+            </div>
+            <div class="field">
+                <div class="field_name">辅助检查</div>
+                <div class="more"><span>&gt;&gt;</span></div>
             </div>
             <div class="field">
                 <div class="field_name">会诊科室:</div>
@@ -45,29 +53,23 @@
                     <input type="text" id="chief_complaint" />
                 </div>
             </div>
-            <div class="field">
-                <div class="field_name">体检</div>
-                <div class="more"><span>&gt;</span></div>
-            </div>
-            <div class="field">
-                <div class="field_name">辅助检查</div>
-                <div class="more"><span>&gt;</span></div>
-            </div>
-            <div class="field">
+            <div class="field textarea">
                 <div class="field_name">诊断:</div>
                 <div>
-                    <input type="text" id="diagnosis" />
+                    <textarea id="diagnosis"></textarea>
                 </div>
             </div>
-            <div class="field">
+            <div class="field textarea">
                 <div class="field_name">治疗:</div>
                 <div>
-                    <input type="text" id="treatment" />
+                    <textarea id="treatment"></textarea>
                 </div>
             </div>
-            <div class="field">
-                <div class="field_name">随访</div>
-                <div class="more"><span>&gt;</span></div>
+            <div class="field textarea">
+                <div class="field_name">随访:</div>
+                <div>
+                    <textarea id="follow_up"></textarea>
+                </div>
             </div>
         </div>
     </div>
