--- a/widget/html/history.html
+++ b/widget/html/history.html
@@ -33,7 +33,7 @@
                 <div class="field_name">维护患者信息</div>
                 <div class="more"><span>&gt;&gt;</span></div>
             </div>
-            <div class="field">
+            <div class="field" onclick="openFrame('physical')">
                 <div class="field_name">体检</div>
                 <div class="more"><span>&gt;&gt;</span></div>
             </div>
@@ -62,7 +62,7 @@
             <div class="field textarea">
                 <div class="field_name">治疗:</div>
                 <div>
-                    <textarea id="treatemnt"></textarea>
+                    <textarea id="treatment"></textarea>
                 </div>
             </div>
             <div class="field textarea">
@@ -88,6 +88,7 @@ apiready = function() {
     }
 
     patient_pointer = [];
+    physical_pointer = [];
 
     // 接收患者信息页面修改的数据
     api.addEventListener({
@@ -95,6 +96,14 @@ apiready = function() {
     }, function(ret, err) {
         if (ret && ret.value) {
             patient_pointer = ret.value;
+        }
+    });
+
+    api.addEventListener({
+        name: 'returnPhysical'
+    }, function(ret, err) {
+        if (ret && ret.value) {
+            physical_pointer = ret.value;
         }
     });
 
@@ -120,6 +129,7 @@ apiready = function() {
         $api.byId('treatment').value = data.treatment;
 
         patient_pointer = data.patient_pointer;
+        physical_pointer = data.physical_pointer;
     }
 }
 
@@ -276,11 +286,22 @@ function saveHistory() {
  * @return {[type]}      [description]
  */
 function openFrame(type) {
+    var data = [];
+    switch (type) {
+        case 'patient':
+            data = patient_pointer;
+            break;
+        case 'physical':
+            data = physical_pointer;
+            break;
+        default:
+            break;
+    }
     api.openFrame({
         name: type,
         url: './' + type + '.html',
         pageParam: {
-            data: patient_pointer
+            data: data
         },
         reload: false,
         bounces: false,
