--- a/widget/html/physical.html
+++ b/widget/html/physical.html
@@ -29,38 +29,38 @@
         <div id="main">
             <div class="field">
                 <div class="field_name">视力:</div>
-                    <div class="leftColumn">
-                        <span>Vod:</span>
-                        <input type="text" class="long" id="vod" onclick="openPicker('vod')"/>
-                    </div>
-                    <div class="rightColumn">
-                        <span>Vos:</span>
-                        <input type="text" class="long" id="vos" onclick="openPicker('vos')"/>
-                    </div>
+                <div class="leftColumn">
+                    <span>Vod:</span>
+                    <input type="text" class="long" id="vod" onclick="openPicker('vod')" />
+                </div>
+                <div class="rightColumn">
+                    <span>Vos:</span>
+                    <input type="text" class="long" id="vos" onclick="openPicker('vos')" />
+                </div>
             </div>
             <div class="field">
                 <div class="field_name">矫正:</div>
-                    <div class="leftColumn">
-                        <span>Vod:</span>
-                        <input type="text" class="long" id="corrected_vod" onclick="openPicker('corrected_vod')"/>
-                    </div>
-                    <div class="rightColumn">
-                        <span>Vos:</span>
-                        <input type="text" class="long" id="corrected_vos" onclick="openPicker('corrected_vos')"/>
-                    </div>
+                <div class="leftColumn">
+                    <span>Vod:</span>
+                    <input type="text" class="long" id="corrected_vod" onclick="openPicker('corrected_vod')" />
+                </div>
+                <div class="rightColumn">
+                    <span>Vos:</span>
+                    <input type="text" class="long" id="corrected_vos" onclick="openPicker('corrected_vos')" />
+                </div>
             </div>
             <div class="field">
                 <div class="field_name">眼压:</div>
-                    <div class="leftColumn">
-                        <span>Tod:</span>
-                        <input type="text" class="short" id="tod" />
-                        <span>mmHg</span>
-                    </div>
-                    <div class="rightColumn">
-                        <span>Tos:</span>
-                        <input type="text" class="short" id="tos" />
-                        <span>mmHg</span>
-                    </div>
+                <div class="leftColumn">
+                    <span>Tod:</span>
+                    <input type="text" class="short" id="tod" />
+                    <span>mmHg</span>
+                </div>
+                <div class="rightColumn">
+                    <span>Tos:</span>
+                    <input type="text" class="short" id="tos" />
+                    <span>mmHg</span>
+                </div>
             </div>
             <div class="field">
                 <div class="field_name">外眼:</div>
@@ -71,37 +71,37 @@
             <div class="field">
                 <div class="field_name">结膜:</div>
                 <div>
-                    <input type="text" id="outer_eye" />
+                    <input type="text" id="conjunctiva" />
                 </div>
             </div>
             <div class="field">
                 <div class="field_name">角膜:</div>
                 <div>
-                    <input type="text" id="outer_eye" />
+                    <input type="text" id="cornea" />
                 </div>
             </div>
             <div class="field">
                 <div class="field_name">前房:</div>
                 <div>
-                    <input type="text" id="outer_eye" />
+                    <input type="text" id="anterior_chamber" />
                 </div>
             </div>
             <div class="field">
                 <div class="field_name">晶体:</div>
                 <div>
-                    <input type="text" id="outer_eye" />
+                    <input type="text" id="lens" />
                 </div>
             </div>
             <div class="field">
                 <div class="field_name">玻璃体:</div>
                 <div>
-                    <input type="text" id="lens" />
+                    <input type="text" id="vitreous" />
                 </div>
             </div>
             <div class="field">
                 <div class="field_name">眼底:</div>
                 <div>
-                    <input type="text" id="outer_eye" />
+                    <input type="text" id="eyeground" />
                 </div>
             </div>
         </div>
@@ -115,23 +115,24 @@
 apiready = function() {
     $api.fixIos7Bar($api.dom('header'));
 
-    // 年龄自动计算，不允许输入
+    // 视力通过picker选择，不允许输入
     $api.attr($api.byId('vod'), 'readonly', 'true');
     $api.attr($api.byId('vos'), 'readonly', 'true');
     $api.attr($api.byId('corrected_vod'), 'readonly', 'true');
     $api.attr($api.byId('corrected_vos'), 'readonly', 'true');
 
     window.closeFrame = function(frameName) {
+        // 取消修改时使用原值覆盖已修改的值
         if (api.pageParam.data.length != 0) {
             data = api.pageParam.data;
-            setPatient(data);
+            setPhysical(data);
         }
         api.closeFrame();
     }
 
     window.saveFrame = function(frameName) {
-        // 返回本页的患者信息
-        returnPatient();
+        // 返回本页的体检信息
+        returnPhysical();
         api.closeFrame();
     }
 
@@ -155,23 +156,26 @@ apiready = function() {
  * [returnPatient 通过event返回本页的数据]
  * @return {[type]} [description]
  */
-function returnPatient() {
+function returnPhysical() {
     api.sendEvent({
-        name: 'returnPatient',
+        name: 'returnPhysical',
         extra: {
-            name: $api.byId('name').value,
-            gender: $api.byId('gender').value,
-            birthday: $api.byId('birthday').value,
-            age: $api.byId('age').value,
-            admission_number: $api.byId('admission_number').value,
-            outpatient_number: $api.byId('outpatient_number').value,
-            phone: $api.byId('phone').value,
-            address: $api.byId('address').value,
-            job: $api.byId('job').value
+            vod: $api.byId('vod').value,
+            vos: $api.byId('vos').value,
+            corrected_vod: $api.byId('corrected_vod').value,
+            corrected_vos: $api.byId('corrected_vos').value,
+            tod: $api.byId('tod').value,
+            tos: $api.byId('tos').value,
+            outer_eye: $api.byId('outer_eye').value,
+            conjunctiva: $api.byId('conjunctiva').value,
+            cornea: $api.byId('cornea').value,
+            anterior_chamber: $api.byId('anterior_chamber').value,
+            lens: $api.byId('lens').value,
+            vitreous: $api.byId('vitreous').value,
+            eyeground: $api.byId('eyeground').value
         }
     });
 }
-
 </script>
 
 </html>
