删除history表中的patient_id字段

--- a/widget/html/history.html
+++ b/widget/html/history.html
@@ -323,7 +323,7 @@ function saveHistory() {
         model.insert({
             class: 'caseHistory',
             value: {
-                patient_id: patient_pointer.id,
+                // patient_id: patient_pointer.id,
                 record_date: getDate(),
                 consultation_department: consultation_department.value,
                 chief_complaint: chief_complaint.value,
