少了两个逗号，include重新改了写法

--- a/widget/html/history.html
+++ b/widget/html/history.html
@@ -308,7 +308,7 @@ function saveHistory() {
                 diagnosis: diagnosis.value,
                 treatment: treatment.value,
                 record_doctor: "me",
-                patient_pointer: patient_pointer.id
+                patient_pointer: patient_pointer.id,
                 physical_pointer: physical_pointer.id
             }
         }, function(ret, err) {
@@ -335,7 +335,7 @@ function saveHistory() {
                 diagnosis: diagnosis.value,
                 treatment: treatment.value,
                 record_doctor: "me",
-                patient_pointer: patient_pointer.id
+                patient_pointer: patient_pointer.id,
                 physical_pointer: physical_pointer.id
             }
         }, function(ret, err) {
