子页面查询和保存逻辑独立实现，未完成

--- a/widget/html/history.html
+++ b/widget/html/history.html
@@ -88,7 +88,7 @@ apiready = function() {
     }
 
     patient_pointer = [];
-    physical_pointer = [];
+    physical_pointer = "";
 
     // 接收患者信息页面修改的数据
     api.addEventListener({
@@ -101,7 +101,7 @@ apiready = function() {
 
     // 接受体检信息页面修改的数据
     api.addEventListener({
-        name: 'returnPhysical'
+        name: 'returnPhysicalId'
     }, function(ret, err) {
         if (ret && ret.value) {
             physical_pointer = ret.value;
@@ -130,7 +130,7 @@ apiready = function() {
         $api.byId('treatment').value = data.treatment;
 
         patient_pointer = data.patient_pointer;
-        physical_pointer = data.physical_pointer;
+        physical_pointer = data.physical_pointer_id;
     }
 }
 
@@ -143,13 +143,14 @@ function savePatient() {
         alert("未输入患者姓名");
         return;
     }
-    api.showProgress({
-        style: 'default',
-        animationType: 'fade',
-        title: '云端保存中...',
-        text: '先喝杯茶...',
-        modal: false
-    });
+    // api.showProgress({
+    //     style: 'default',
+    //     animationType: 'fade',
+    //     title: '云端保存中...',
+    //     text: '先喝杯茶...',
+    //     modal: false
+    // });
+    showProgress();
     var model = api.require('model');
     model.config({
         appId: 'A6903478274381',
@@ -174,7 +175,7 @@ function savePatient() {
         }, function(ret, err) {
             if (ret) {
                 // 保存体检信息
-                savePhysical();
+                saveHistory();
                 return true;
             } else {
                 alert("修改患者信息失败，请重试！");
@@ -198,82 +199,11 @@ function savePatient() {
         }, function(ret, err) {
             if (ret) {
                 // 首次新增需使用patient_pointer的id和病历关联
-                // patient_pointer.id = ret.id;
-                // 保存体检信息
-                savePhysical();
+                patient_pointer.id = ret.id;
+                saveHistory();
                 return true;
             } else {
                 alert("保存患者信息失败，请重试！");
-                return false;
-            }
-        });
-    }
-}
-
-
-function savePhysical() {
-    var model = api.require('model');
-    model.config({
-        appId: 'A6903478274381',
-        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-        host: 'https://d.apicloud.com'
-    });
-    if (type == "modi") { // 修改
-        model.updateById({
-            class: 'physical',
-            id: api.pageParam.data.physical_pointer.id,
-            value: {
-                vod: physical_pointer.vod,
-                vos: physical_pointer.vos,
-                corrected_vod: physical_pointer.corrected_vod,
-                corrected_vos: physical_pointer.corrected_vos,
-                tod: physical_pointer.tod,
-                tos: physical_pointer.tos,
-                outer_eye: physical_pointer.outer_eye,
-                conjunctiva: physical_pointer.conjunctiva,
-                cornea: physical_pointer.cornea,
-                anterior_chamber: physical_pointer.anterior_chamber,
-                lens: physical_pointer.lens,
-                vitreous: physical_pointer.vitreous,
-                eyeground: physical_pointer.eyeground
-            }
-        }, function(ret, err) {
-            if (ret) {
-                // 保存病历信息
-                saveHistory();
-                return true;
-            } else {
-                alert("修改体检信息失败，请重试！");
-                return false;
-            }
-        });
-    } else { // 新增
-        model.insert({
-            class: 'physical',
-            value: {
-                vod: physical_pointer.vod,
-                vos: physical_pointer.vos,
-                corrected_vod: physical_pointer.corrected_vod,
-                corrected_vos: physical_pointer.corrected_vos,
-                tod: physical_pointer.tod,
-                tos: physical_pointer.tos,
-                outer_eye: physical_pointer.outer_eye,
-                conjunctiva: physical_pointer.conjunctiva,
-                cornea: physical_pointer.cornea,
-                anterior_chamber: physical_pointer.anterior_chamber,
-                lens: physical_pointer.lens,
-                vitreous: physical_pointer.vitreous,
-                eyeground: physical_pointer.eyeground
-            }
-        }, function(ret, err) {
-            if (ret) {
-                // 首次新增需使用patient_pointer的id和病历关联
-                // patient_pointer.id = ret.id;
-                // 保存病历信息
-                saveHistory();
-                return true;
-            } else {
-                alert("保存体检信息失败，请重试！");
                 return false;
             }
         });
@@ -309,7 +239,7 @@ function saveHistory() {
                 treatment: treatment.value,
                 record_doctor: "me",
                 patient_pointer: patient_pointer.id,
-                physical_pointer: physical_pointer.id
+                physical_pointer: physical_pointer
             }
         }, function(ret, err) {
             if (ret) {
