--- a/widget/html/physical.html
+++ b/widget/html/physical.html
@@ -115,33 +115,61 @@
 apiready = function() {
     $api.fixIos7Bar($api.dom('header'));
 
+    alert(JSON.stringify(api.pageParam));
+    id = api.pageParam.data;
+
     // 视力通过picker选择，不允许输入
     $api.attr($api.byId('vod'), 'readonly', 'true');
     $api.attr($api.byId('vos'), 'readonly', 'true');
     $api.attr($api.byId('corrected_vod'), 'readonly', 'true');
     $api.attr($api.byId('corrected_vos'), 'readonly', 'true');
 
+    model = api.require('model');
+    query = api.require('query');
+    model.config({
+        appId: 'A6903478274381',
+        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
+        host: 'https://d.apicloud.com'
+    });
+
+    // 如果主界面传入了id，代表修改，则从数据库查询已有数据
+    if (id != undefined && id != null id != "") {
+        query.createQuery(function(ret, err) {
+            if (ret && ret.qid) {
+                var queryId = ret.qid;
+                query.whereEqual({
+                    qid: queryId,
+                    column: 'id',
+                    value: id
+                });
+                model.findAll({
+                    class: "physical",
+                    qid: queryId
+                }, function(ret, err) {
+                    if (err) {
+                        alert(JSON.stringify(err));
+                    } else {
+                        if (ret) {
+                            setPhysical(ret);
+                        }
+                    }
+                });
+            }
+        });
+    }
+
     window.closeFrame = function(frameName) {
-        // 取消修改时使用原值覆盖已修改的值
-        if (api.pageParam.data.length != 0) {
-            data = api.pageParam.data;
-            setPhysical(data);
-        }
         api.closeFrame();
     }
 
     window.saveFrame = function(frameName) {
-        // 返回本页的体检信息
-        returnPhysical();
+        // 保存体检信息
+        savePhysical();
+        api.hideProgress();
         api.closeFrame();
     }
 
-    // 从病历主页面传的值，赋给本页面
-    if (api.pageParam.data.length != 0) {
-        data = api.pageParam.data;
-        setPatient(data);
-    }
-
+    // 设置页面四个视力的值
     api.addEventListener({
         name: 'returnVision'
     }, function(ret, err) {
@@ -153,13 +181,17 @@ apiready = function() {
 }
 
 /**
- * [returnPatient 通过event返回本页的数据]
+ * [savePhysical description]
  * @return {[type]} [description]
  */
-function returnPhysical() {
-    api.sendEvent({
-        name: 'returnPhysical',
-        extra: {
+function savePhysical() {
+
+    showProgress();
+
+    model.updateById({
+        class: 'physical',
+        id: id,
+        value: {
             vod: $api.byId('vod').value,
             vos: $api.byId('vos').value,
             corrected_vod: $api.byId('corrected_vod').value,
@@ -173,6 +205,28 @@ function returnPhysical() {
             lens: $api.byId('lens').value,
             vitreous: $api.byId('vitreous').value,
             eyeground: $api.byId('eyeground').value
+        }
+    }, function(ret, err) {
+        if (ret) {
+            alert(JSON.stringify(ret));
+            returnPhysicalId(ret.id);
+            return true;
+        } else {
+            alert("保存体检信息失败！");
+            return false;
+        }
+    });
+}
+
+/**
+ * [returnPatient 通过event返回本页的数据]
+ * @return {[type]} [description]
+ */
+function returnPhysicalId(id) {
+    api.sendEvent({
+        name: 'returnPhysicalId',
+        extra: {
+            physical_pointer_id: id
         }
     });
 }
