仍然使用win来打开子页面，实现physical页面新增、修改，查看待完善

--- a/widget/html/history.html
+++ b/widget/html/history.html
@@ -29,11 +29,11 @@
             </nav>
         </header>
         <div id="main">
-            <div class="field" onclick="openFrame('patient')">
+            <div class="field" onclick="openWin('patient');">
                 <div class="field_name">维护患者信息</div>
                 <div class="more"><span>&gt;&gt;</span></div>
             </div>
-            <div class="field" onclick="openFrame('physical')">
+            <div class="field" onclick="openWin('physical');">
                 <div class="field_name">体检</div>
                 <div class="more"><span>&gt;&gt;</span></div>
             </div>
@@ -104,7 +104,7 @@ apiready = function() {
         name: 'returnPhysicalId'
     }, function(ret, err) {
         if (ret && ret.value) {
-            physical_pointer = ret.value;
+            physical_pointer = ret.value.physical_id;
         }
     });
 
@@ -130,7 +130,7 @@ apiready = function() {
         $api.byId('treatment').value = data.treatment;
 
         patient_pointer = data.patient_pointer;
-        physical_pointer = data.physical_pointer_id;
+        physical_pointer = data.physical_pointer;
     }
 }
 
@@ -266,7 +266,7 @@ function saveHistory() {
                 treatment: treatment.value,
                 record_doctor: "me",
                 patient_pointer: patient_pointer.id,
-                physical_pointer: physical_pointer.id
+                physical_pointer: physical_pointer
             }
         }, function(ret, err) {
             if (ret) {
@@ -288,32 +288,34 @@ function saveHistory() {
  * @param  {[type]} page [description]
  * @return {[type]}      [description]
  */
-function openFrame(type) {
-    var data = [];
+function openWin(type) {
+    var data = {};
     switch (type) {
         case 'patient':
             data = patient_pointer;
             break;
         case 'physical':
-            data = physical_pointer;
+            data = {
+                "id": physical_pointer
+            };
             break;
         default:
             break;
     }
-    api.openFrame({
+    api.openWin({
         name: type,
         url: './' + type + '.html',
         pageParam: {
             data: data
         },
-        reload: false,
+        reload: true,
         bounces: false,
-        rect: {
-            marginLeft: 0,
-            marginTop: 0,
-            marginBottom: 0,
-            marginRight: 0
-        },
+        // rect: {
+        //     marginLeft: 0,
+        //     marginTop: 0,
+        //     marginBottom: 0,
+        //     marginRight: 0
+        // },
         animation: {
             type: "movein",
             subType: "from_right",
